--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div id="welcome-page" class="container-fluid">
-    <header class="docs-header-background" aria-label="Welcome" id="homepage-header">
+  <header class="docs-header-background" aria-label="Welcome" id="homepage-header">
     <div class="docs-header-section">
       <div class="docs-header-headline">
         <h1 class="mat-h1">Jan Warzecha</h1>
@@ -36,11 +36,11 @@
 
       <mat-tab label="Short">
         <div class="mat-tab">
-      <h1>
-        Brief info about me
-      </h1>
+          <h1>
+            Brief info
+            </h1>
           <h2>
-           I'm Jan Warzecha from Wrocław, Poland
+            I'm Jan Warzecha from Wrocław, Poland
           </h2>
           <ul>
             <li>
@@ -60,7 +60,7 @@
               environment / energy / documentation / mapping / moddeling
             </li>
             <li>
-            <b>I'm currently looking to remotely join frontend / full-stack team</b>
+              <b>I'm currently looking to remotely join frontend / full-stack team</b>
             </li>
           </ul>
         </div>
@@ -134,12 +134,50 @@
 
       <mat-tab label="Personal">
         <div class="mat-tab">
-          <h1>Short Bio</h1><br>
-          <H2>Hi, I'm Jan</H2>
-          <p>Self-Taught Coder</p>
-          <p>English speaker - C2</p>
-          <p>Graduated and experienced in Exploration Geology</p>
-          <p>Curious without limits</p>
+          <h2>
+            Fast learner
+          </h2>
+          <p>
+            I'm curious of the world, new material naturally connects with my
+            knowledge and is remembered through repetition.
+          </p>
+          <h2>
+            Team player
+          </h2>
+          <p>
+            When you aim to be a great team player, others will follow.
+          </p>
+          <h2>
+            Adaptive
+          </h2>
+          <p>
+            Adjust, change is permanent.
+          </p>
+          <h2>
+            Communicative
+          </h2>
+          <p>
+            Listen, listen, listen.
+          </p>
+          <h2>
+            Problem Solver
+          </h2>
+          <p>
+            There are no such things as problems, Mr. Green. Only people and
+            situations - Revolver movie
+          </p>
+          <h2>
+            Good Cook
+          </h2>
+          <p>
+            It comes naturally.
+          </p>
+          <h2>
+            Dog Whisperer
+          </h2>
+          <p>
+            We just connect.
+          </p>
         </div>
       </mat-tab>
     </mat-tab-group>
@@ -159,7 +197,7 @@
               Jestem programistą samoukiem, koduję od lipca 2020
             </li>
             <li>
-              HTML, CSS, Js, Ts, Angular
+              HTML, CSS, JavaScript, TypeScript, Angular 13, Material
             </li>
             <li>
               angielski B2/C1
@@ -172,81 +210,125 @@
               górnictwa / wiertnictwa / ochrony środowiska / energetyki
             </li>
             <li>
-              Obecnie chcę dołączyć do zespołu Developerów 
+              Obecnie chcę dołączyć do zespołu Developerów
             </li>
           </ul>
         </mat-tab>
 
         <mat-tab label="Zawodowo">
           <div class="mat-tab">
-<h1>
-  Transport
-</h1>
-<h2>
-  Kierowca
-</h2>
-<p>2017 - 2021, Wrocław</p>
-<ul>
-  <li>
-    transport VIP 
-  </li>
-</ul>
-<h1>
-  PGE EJ 1 - Pierwsza Elektrownia Jądrowa
-</h1>
-<h2>
-  Specjalista ds. Inżynierii
-</h2>
-<p>2016 - 2018 Pomorze, Polska</p>
-<ul>
-  <li>
-    Monitoring hydrogeologiczny
-  </li>
-  <li>
-    Nadzór nad miejscem wiercenia
-  </li>
-  <li>
-    Zapewnienie jakości w pobieraniu próbek i logistyce
-  </li>
-  <li>
-    Raportowanie
-  </li>
-</ul>
-<h1>
-  Centrum Badawczo-Rozwojowe Wrocław
-</h1>
-<h2>
-  Specjalista ds. Inżynierii - Geolog Poszukiwawczy</h2>
-<p>
-  2010 - 2016 Wrocław, Polska
-</p>
-<ul>
-  <li>
-    Zarządzania bazami danych
-  </li>
-  <li>
-    Mapy i inne grafiki
-  </li>
-  <li>
-    Pisanie dokumentacji
-  </li>
-  <li>
-    Szacowanie zasobów: miedź, srebro, nikiel, węgiel
-  </li>
-  <li>
-    Reprezentacja inwestora, nadzór nad robotami wiertniczymi
-  </li>
-  <li>
-    Koordynacja pracy urządzeń wiertniczych, zapewnienie jakości, cyrkulacja danych i dokumentów, pobieranie próbek podstawowych, logistyka
-  </li>
-</ul>
+            <h1>
+              Transport
+            </h1>
+            <h2>
+              Kierowca
+            </h2>
+            <p>2017 - 2021, Wrocław</p>
+            <ul>
+              <li>
+                transport VIP
+              </li>
+            </ul>
+            <h1>
+              PGE EJ 1 - Pierwsza Elektrownia Jądrowa
+            </h1>
+            <h2>
+              Specjalista ds. Inżynierii
+            </h2>
+            <p>2016 - 2018 Pomorze, Polska</p>
+            <ul>
+              <li>
+                Monitoring hydrogeologiczny
+              </li>
+              <li>
+                Nadzór nad miejscem wiercenia
+              </li>
+              <li>
+                Zapewnienie jakości w pobieraniu próbek i logistyce
+              </li>
+              <li>
+                Raportowanie
+              </li>
+            </ul>
+            <h1>
+              Centrum Badawczo-Rozwojowe Wrocław
+            </h1>
+            <h2>
+              Specjalista ds. Inżynierii - Geolog Poszukiwawczy</h2>
+            <p>
+              2010 - 2016 Wrocław, Polska
+            </p>
+            <ul>
+              <li>
+                Zarządzania bazami danych
+              </li>
+              <li>
+                Mapy i inne grafiki
+              </li>
+              <li>
+                Pisanie dokumentacji
+              </li>
+              <li>
+                Szacowanie zasobów: miedź, srebro, nikiel, węgiel
+              </li>
+              <li>
+                Reprezentacja inwestora, nadzór nad robotami wiertniczymi
+              </li>
+              <li>
+                Koordynacja pracy urządzeń wiertniczych, zapewnienie jakości, cyrkulacja danych i dokumentów, pobieranie
+                próbek podstawowych, logistyka
+                </li>
+                </ul>
 
           </div>
         </mat-tab>
 
         <mat-tab label="Prywatnie">
           <div class="mat-tab">
-
+            <h2>
+              Szybko się uczę
+            </h2>
+            <p>
+              Jestem ciekawy świata, nowy materiał w naturalny sposób łączy się z moją
+              wiedzą. Dobrze zapamiętuję poprzez powtarzanie.
+            </p>
+            <h2>
+              Gracz zespołowy
+            </h2>
+            <p>
+              Kiedy jesteś świetnym graczem zespołowym, inni idą za tobą.
+            </p>
+            <h2>
+              Adaptacyjny
+            </h2>
+            <p>
+              Dostosuj się, zmiana jest jedyną stałą.
+            </p>
+            <h2>
+              Komunikacywny
+            </h2>
+            <p>
+              Słuchaj, słuchaj, słuchaj.
+            </p>
+            <h2>
+              Rozwiązuje problemów
+            </h2>
+            <p>
+              Nie ma takich rzeczy jak problemy, panie Green. Tylko ludzie i
+              sytuacje - film Revolver
+            </p>
+            <h2>
+              Dobry kucharz
+            </h2>
+            <p>
+              To przychodzi naturalnie.
+            </p>
+            <h2>
+              Zaklinacz psów
+            </h2>
+            <p>
+              Po prostu się łączymy.
+            </p>
 
           </div>
         </mat-tab>
@@ -267,11 +349,11 @@
   <hr mat-divider>
   <div id="contact" class="homepage-tile contact">
     <h1>Contact me</h1>
-<app-contact-page></app-contact-page>
-</div>
-<hr mat-divider>
+    <app-contact-page></app-contact-page>
+    </div>
+    <hr mat-divider>
 
-<div id="footer" class="homepage-tile">
-  <h2>Explore more</h2>
-  <app-file-tree></app-file-tree>
-</div>
+  <div id="footer" class="homepage-tile">
+    <h2>Explore more</h2>
+    <app-file-tree></app-file-tree>
+  </div>
