--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,6 +5,7 @@
 
 
     <mat-toolbar class="side-nav-toolbar-spacer" matTooltip="Esc key to hide menu" #tooltip="matTooltip">
+      
       <button mat-icon-button (click)="toogleUserLogin()" matTooltip="Sign In" #tooltip="matTooltip" type="button"
         aria-label="Sign In" aria-tooltip="Open Login page">
         <mat-icon aria-label="Home icon">home</mat-icon>
@@ -63,13 +64,13 @@
        <a mat-list-item class="menu-item" matTooltip="Compodoc documentation for Portfolio-App" #tooltip="matTooltip"
         aria-tooltip="Documentation by Compodoc" href="assets/Docs/Compodoc/index.html"
         target="_blank"><img src="assets/Docs/Compodoc/compodoc-vectorise-inverted.png" alt="Compodoc"
-          class="menu-docs-logo" /><span class="side-nav-but-spacer"></span>by Compodoc
+          class="menu-docs-logo" /><span class="side-nav-but-spacer"></span>Compodoc Docs
       </a>
 
       <a mat-list-item class="menu-item" matTooltip="Typedoc documentation for Portfolio-App" #tooltip="matTooltip"
         aria-tooltip="Documentation by Typedoc" href="assets/Docs/Typedoc/index.html"
         target="_blank"><img src="assets/Docs/Typedoc/typedoc.png" alt="Typdedoc" class="menu-docs-logo" /><span
-          class="side-nav-but-spacer"></span>Typedoc</a>
+          class="side-nav-but-spacer"></span>Typedoc Docs</a>
 
     </mat-nav-list>
 
