--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -97,7 +97,7 @@ $margin-promotion-sections-small: 152px;
       line-height: 56px;
       margin: 15px 5px;
     }
-    h2 {
+    .mat-h2 {
       font-size: 20px;
       font-weight: 300;
       line-height: 28px;
@@ -122,7 +122,7 @@ $margin-promotion-sections-small: 152px;
       margin: 15px 5px;
     }
      .docs-header-headline
-    h2 {
+    .mat-h2 {
       font-size: 20px;
       font-weight: 300;
       line-height: 20px;
@@ -170,7 +170,7 @@ mat-icon {
 #bio {
   
   mat-tab-group {
-    
+
     h1 {
       font-size: 22px;
       font-weight: bold;
