--- a/src/app/components/project-pages/future-green-tech/future-green-tech.component.scss
+++ b/src/app/components/project-pages/future-green-tech/future-green-tech.component.scss
@@ -9,8 +9,8 @@ height: 100%;
 
 }
 .dashboard-card { 
-  top: 15px;
-  bottom: 15px;
+  top: 10px;
+  bottom: 10px;
   padding: 0;
   width: 90%;
   height: 90%;
@@ -41,13 +41,17 @@ font-size: 14px;
     margin-left: 15px;
 }
 .card-description{
-margin-top: 5px;
+margin-top: 15px;
 margin-left: 35px;
 font-size: 12px;
     font-weight: 300;
     line-height: 14px;
     margin-left: 15px;
+}
+.card-description::first-letter{
 
+font-size: xx-large;
+font-weight: 200;
 }
 .more-button {
   position: absolute;
