--- a/src/app/components/project-pages/portfolio/portfolio.component.scss
+++ b/src/app/components/project-pages/portfolio/portfolio.component.scss
@@ -13,15 +13,15 @@ height: 100%;
   bottom: 15px;
   padding: 0;
   width: 90%;
-  height: 90%;
+  height: auto;
   max-width: 100%;
-max-height: 100%;
+max-height: auto;
  margin-left:auto;
     margin-right:auto;
   
 }
 
-mat-card:hover {
+ mat-raised-button:hover {
     @include mat.elevation(8);
   }
 
@@ -73,7 +73,7 @@ height: 100%;
     }
     
 
-mat-card img{
+mat-card .img_project{
         width: 100%;
         height: auto;       
   display:block;
@@ -82,4 +82,15 @@ mat-card img{
   margin-top: 3%;
   max-width: 500px;
   
+}
+.menu-item{
+margin: 15px 0;
+@include mat.elevation(2);
+    :hover {
+    @include mat.elevation(4);
+  }
+}
+.menu-docs-logo{
+  width:24px;
+  height: 24px;
 }
