--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,20 +2,26 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'push' : 'side'" [opened]="(isHandset$ | async) === false">
 
-
-
     <mat-toolbar class="side-nav-toolbar-spacer" matTooltip="Esc key to hide menu" #tooltip="matTooltip">
-      
+
+      <span class="side-nav-toolbar-spacer"></span>
       <button mat-icon-button (click)="toogleUserLogin()" matTooltip="Sign In" #tooltip="matTooltip" type="button"
         aria-label="Sign In" aria-tooltip="Open Login page">
         <mat-icon aria-label="Home icon">home</mat-icon>
       </button>
 
+      <span class="side-nav-toolbar-spacer"></span>
+      <button class="menu-item2" mat-button class="tooltips-button" matTooltip="Show / hide all tooltip"
+        #tooltip="matTooltip" (mousemove)="show = false" (click)="showAllTooltips()">
+        Tooltips
+        
+      </button>
+      <span class="side-nav-toolbar-spacer"></span>
       <app-theme-switch [options]="options$ | async" (themeChange)="themeChangeHandler($event)"
         matTooltip="Change theme" aria-tooltip="Aria description" #tooltip="matTooltip" type="button"
         aria-label="Change theme">
       </app-theme-switch>
-      
+      <span class="side-nav-toolbar-spacer"></span>
 
 
     </mat-toolbar>
@@ -56,31 +62,26 @@
           class="side-nav-but-spacer"></span>GitHub
       </a>
 
-      <a mat-list-item class="menu-item" matTooltip="LinkedIn" #tooltip="matTooltip"
-        aria-tooltip="LinkedIn Profile " href="https://www.linkedin.com/in/khq" target="_blank"><img
-          src="assets/img/homepage/in.png" alt="LinkedIn" class="menu-docs-logo" /><span
-          class="side-nav-but-spacer"></span>LinkedIn
+      <a mat-list-item class="menu-item" matTooltip="LinkedIn" #tooltip="matTooltip" aria-tooltip="LinkedIn Profile "
+        href="https://www.linkedin.com/in/khq" target="_blank"><img src="assets/img/homepage/in.png" alt="LinkedIn"
+          class="menu-docs-logo" /><span class="side-nav-but-spacer"></span>LinkedIn
       </a>
-       <a mat-list-item class="menu-item" matTooltip="Compodoc documentation for Portfolio-App" #tooltip="matTooltip"
-        aria-tooltip="Documentation by Compodoc" href="assets/Docs/Compodoc/index.html"
-        target="_blank"><img src="assets/Docs/Compodoc/compodoc-vectorise-inverted.png" alt="Compodoc"
-          class="menu-docs-logo" /><span class="side-nav-but-spacer"></span>Compodoc Docs
+      <a mat-list-item class="menu-item" matTooltip="Compodoc documentation for Portfolio-App" #tooltip="matTooltip"
+        aria-tooltip="Documentation by Compodoc" href="assets/Docs/Compodoc/index.html" target="_blank"><img
+          src="assets/Docs/Compodoc/compodoc-vectorise-inverted.png" alt="Compodoc" class="menu-docs-logo" /><span
+          class="side-nav-but-spacer"></span>Compodoc Docs
       </a>
 
       <a mat-list-item class="menu-item" matTooltip="Typedoc documentation for Portfolio-App" #tooltip="matTooltip"
-        aria-tooltip="Documentation by Typedoc" href="assets/Docs/Typedoc/index.html"
-        target="_blank"><img src="assets/Docs/Typedoc/typedoc.png" alt="Typdedoc" class="menu-docs-logo" /><span
+        aria-tooltip="Documentation by Typedoc" href="assets/Docs/Typedoc/index.html" target="_blank"><img
+          src="assets/Docs/Typedoc/typedoc.png" alt="Typdedoc" class="menu-docs-logo" /><span
           class="side-nav-but-spacer"></span>Typedoc Docs</a>
 
     </mat-nav-list>
 
     <hr mat-divider>
     <div>
-      <button class="menu-item2" mat-button class="tooltips-button"
-        matTooltip="Show / hide all tooltip"
-        #tooltip="matTooltip" (mousemove)="show = false" (click)="showAllTooltips()">
-        Tooltips
-      </button>
+
 
 
     </div>
@@ -100,6 +101,7 @@
     </mat-toolbar>
 
     <ng-content></ng-content>
+    
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
