--- a/src/app/components/contact-page/contact-page.component.scss
+++ b/src/app/components/contact-page/contact-page.component.scss
@@ -1,5 +1,4 @@
-
-.contact-clipboard{
-text-align: center;
-margin:100px auto;
+.contact-clipboard {
+  text-align: center;
+  margin: 35vh auto;
 }
