--- a/src/app/components/project-pages/future-green-tech/future-green-tech.component.scss
+++ b/src/app/components/project-pages/future-green-tech/future-green-tech.component.scss
@@ -50,8 +50,8 @@ font-size: 12px;
 }
 .card-description::first-letter{
 
-font-size: xx-large;
-font-weight: 200;
+font-size:xx-large ;
+font-weight:bold;
 }
 .more-button {
   position: absolute;
