--- a/src/app/components/project-pages/portfolio/portfolio.component.html
+++ b/src/app/components/project-pages/portfolio/portfolio.component.html
@@ -37,20 +37,18 @@
                         <a mat-raised-button href="{{card.gh_pages_url}}" target="_blank" #tooltip="matTooltip"
                             matTooltip="Visit project website">Visit</a>
 
-                        <a mat-raised-button matTooltip="Compodoc documentation for Portfolio-App"
-                            #tooltip="matTooltip" aria-tooltip="Documentation by Compodoc"
-                            href="assets/Docs/Compodoc/index.html" target="_blank">
-                            
-                            <img
-                                src="assets/Docs/Compodoc/compodoc-vectorise-inverted.png" alt="Compodoc"
+                        <a mat-raised-button matTooltip="Compodoc documentation for Portfolio-App" #tooltip="matTooltip"
+                            aria-tooltip="Documentation by Compodoc" href="assets/docs/compodoc/index.html"
+                            target="_blank">
+
+                            <img src="assets/docs/compodoc/compodoc-vectorise-inverted.png" alt="Compodoc"
                                 class="menu-docs-logo" /><span class="side-nav-but-spacer"></span>Compodoc Docs
                         </a>
 
-                        <a mat-raised-button  matTooltip="Typedoc documentation for Portfolio-App"
-                            #tooltip="matTooltip" aria-tooltip="Documentation by Typedoc"
-                            href="assets/Docs/Typedoc/index.html" target="_blank">
-                            <img
-                                src="assets/Docs/Typedoc/typedoc.png" alt="Typdedoc" class="menu-docs-logo" /><span
+                        <a mat-raised-button matTooltip="Typedoc documentation for Portfolio-App" #tooltip="matTooltip"
+                            aria-tooltip="Documentation by Typedoc" href="assets/docs/typedoc/index.html"
+                            target="_blank">
+                            <img src="assets/docs/typedoc/typedoc.png" alt="Typdedoc" class="menu-docs-logo" /><span
                                 class="side-nav-but-spacer"></span>Typedoc Docs</a>
 
                     </mat-card-actions>
