--- a/src/app/components/project-pages/portfolio/portfolio.component.scss
+++ b/src/app/components/project-pages/portfolio/portfolio.component.scss
@@ -1,53 +1,58 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 .grid-container {
   width: 100%;
-  }
-  .grid-tile{
-width: 100%;
-height: 100%;
-
 }
-.dashboard-card { 
+.grid-tile {
+  width: 100%;
+  height: 100%;
+}
+.dashboard-card {
   top: 15px;
   bottom: 15px;
   padding: 0;
   width: 90%;
   height: auto;
   max-width: 100%;
-max-height: auto;
- margin-left:auto;
-    margin-right:auto;
+  max-height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+mat-raised-button:hover {
+  @include mat.elevation(8);
+}
+
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+.card-subtitle {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 14px;
+  margin-left: 15px;
+
+}
+.card-description {
+  margin-top: 5px;
   
+  font-size: 12px;
+  font-weight: 300;
+
+  margin-left: 15px;
+
+  padding: 10px;
 }
 
- mat-raised-button:hover {
-    @include mat.elevation(8);
-  }
-
-.card-title{
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 18px;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top: 10px;
-   
-}
-.card-subtitle{
-font-size: 14px;
-    font-weight: 300;
-    line-height: 14px;
-    margin-left: 15px;
-}
-.card-description{
-margin-top: 5px;
-margin-left: 35px;
-font-size: 12px;
-    font-weight: 300;
-    line-height: 14px;
-    margin-left: 15px;
-
+.card-description::first-letter {
+  font-size: xx-large;
+  font-weight: bold;
+  
 }
 .more-button {
   position: absolute;
@@ -56,41 +61,38 @@ font-size: 12px;
 }
 
 .dashboard-card-content {
-width: 100%;
-height: 100%;
-  }
-
+  width: 100%;
+  height: 100%;
+}
 
 .button-group {
-    
-    min-height: 10%;
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 2%;
-    column-gap: 2%;
-    justify-content:center;
-    align-items: center;
-    }
-    
-
-mat-card .img_project{
-        width: 100%;
-        height: auto;       
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
-  margin-top: 3%;
-  max-width: 500px;
+  min-height: 10%;
+  display: flex;
+  flex-flow: row wrap;
+  row-gap: 2%;
+  column-gap: 2%;
+  justify-content: center;
+  align-items: center;
   
 }
-.menu-item{
-margin: 15px 0;
-@include mat.elevation(2);
-    :hover {
+
+mat-card .img_project {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3%;
+  max-width: 500px;
+}
+.menu-item {
+  margin: 15px 0;
+  @include mat.elevation(2);
+  :hover {
     @include mat.elevation(4);
   }
 }
-.menu-docs-logo{
-  width:24px;
+.menu-docs-logo {
+  width: 24px;
   height: 24px;
 }
