--- a/src/app/components/project-pages/resp-gallery/resp-gallery.component.scss
+++ b/src/app/components/project-pages/resp-gallery/resp-gallery.component.scss
@@ -1,53 +1,49 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 .grid-container {
   width: 100%;
-  }
-  .grid-tile{
-width: 100%;
-height: 100%;
-
 }
-.dashboard-card { 
+.grid-tile {
+  width: 100%;
+  height: 100%;
+}
+.dashboard-card {
   top: 15px;
   bottom: 15px;
   padding: 0;
   width: 90%;
   height: 90%;
   max-width: 100%;
-max-height: 100%;
- margin-left:auto;
-    margin-right:auto;
-  
+  max-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 mat-card:hover {
-    @include mat.elevation(8);
-  }
-
-.card-title{
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 18px;
-    margin-left:auto;
-    margin-right:auto;
-    margin-top: 10px;
-   
+  @include mat.elevation(8);
 }
-.card-subtitle{
-font-size: 14px;
-    font-weight: 300;
-    line-height: 14px;
-    margin-left: 15px;
-}
-.card-description{
-margin-top: 5px;
-margin-left: 35px;
-font-size: 12px;
-    font-weight: 300;
-    line-height: 14px;
-    margin-left: 15px;
 
+.card-title {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+.card-subtitle {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 14px;
+  margin-left: 15px;
+}
+.card-description {
+  margin-top: 5px;
+  margin-left: 35px;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 14px;
+  margin-left: 15px;
 }
 .more-button {
   position: absolute;
@@ -56,30 +52,26 @@ font-size: 12px;
 }
 
 .dashboard-card-content {
-width: 100%;
-height: 100%;
-  }
-
+  width: 100%;
+  height: 100%;
+}
 
 .button-group {
-    
-    min-height: 10%;
-    display: flex;
-    flex-flow: row wrap;
-    row-gap: 2%;
-    column-gap: 2%;
-    justify-content:center;
-    align-items: center;
-    }
-    
+  min-height: 10%;
+  display: flex;
+  flex-flow: row wrap;
+  row-gap: 2%;
+  column-gap: 2%;
+  justify-content: center;
+  align-items: center;
+}
 
-mat-card img{
-        width: 100%;
-        height: auto;       
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
+mat-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 3%;
   max-width: 500px;
-  
 }
