--- a/src/assets/Docs/Compodoc/components/MessagesComponent.html
+++ b/src/assets/Docs/Compodoc/components/MessagesComponent.html
@@ -134,17 +134,8 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#country" >country</a>
-                            </li>
-                            <li>
                                     <span class="modifier">Public</span>
                                 <a href="#messageService" >messageService</a>
-                            </li>
-                            <li>
-                                <a href="#name" >name</a>
-                            </li>
-                            <li>
-                                <a href="#title" >title</a>
                             </li>
                             <li>
                                 <a href="#ToggleMessages" >ToggleMessages</a>
@@ -190,7 +181,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/messages/messages.component.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/messages/messages.component.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -257,8 +248,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="21"
-                            class="link-to-prism">src/app/components/messages/messages.component.ts:21</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="17"
+                            class="link-to-prism">src/app/components/messages/messages.component.ts:17</a></div>
                 </td>
             </tr>
 
@@ -294,8 +285,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="25"
-                            class="link-to-prism">src/app/components/messages/messages.component.ts:25</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="21"
+                            class="link-to-prism">src/app/components/messages/messages.component.ts:21</a></div>
                 </td>
             </tr>
 
@@ -321,37 +312,6 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="country"></a>
-                    <span class="name">
-                        <span ><b>country</b></span>
-                        <a href="#country"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;string&#x27;</code>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/messages/messages.component.ts:15</a></div>
-                        </td>
-                    </tr>
-
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
                     <a name="messageService"></a>
                     <span class="name">
                             <span class="modifier">Public</span>
@@ -368,69 +328,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/components/messages/messages.component.ts:19</a></div>
-                        </td>
-                    </tr>
-
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="name"></a>
-                    <span class="name">
-                        <span ><b>name</b></span>
-                        <a href="#name"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;string&#x27;</code>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/messages/messages.component.ts:14</a></div>
-                        </td>
-                    </tr>
-
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="title"></a>
-                    <span class="name">
-                        <span ><b>title</b></span>
-                        <a href="#title"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Default value : </i><code>&#x27;string&#x27;</code>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/messages/messages.component.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/messages/messages.component.ts:15</a></div>
                         </td>
                     </tr>
 
@@ -455,7 +353,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/components/messages/messages.component.ts:17</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/components/messages/messages.component.ts:13</a></div>
                         </td>
                     </tr>
 
@@ -480,44 +378,40 @@ import { Injectable } from &#x27;@angular/core&#x27;;
 })
 @Injectable({ providedIn: &#x27;root&#x27; })
 export class MessagesComponent implements OnInit {
-  title &#x3D; &#x27;string&#x27;;
-  name &#x3D; &#x27;string&#x27;;
-  country &#x3D; &#x27;string&#x27;;
- 
   ToggleMessages &#x3D; true;
-
+  
   constructor(public messageService: MessageService) {}
 
   ngOnInit() {
-    this.messageService.add(&#x27;Message Service: OK&#x27;);
+    this.messageService.add(&#x27;Messages&#x27;);
   }
 
   ToggleMessageComponent() {
     this.ToggleMessages &#x3D; !this.ToggleMessages;
+  
   }
 }
+
+
 
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;button mat-icon-button (click)&#x3D;&quot;ToggleMessageComponent()&quot;&gt;
-  &lt;mat-icon matBadge&#x3D;&quot;12&quot; matBadgeColor&#x3D;&quot;accent&quot; class&#x3D;&quot;badge-icon favorite-icon&quot; aria-label&#x3D;&quot;Toggle Display Messages&quot;
+  &lt;mat-icon matBadge&#x3D;&quot;{{ messageService.messages.length }}&quot; matBadgeColor&#x3D;&quot;accent&quot; class&#x3D;&quot;badge-icon favorite-icon&quot; aria-label&#x3D;&quot;Toggle Display Messages&quot;
     matTooltip&#x3D;&quot;Toggle Display Messages&quot; #tooltip&#x3D;&quot;matTooltip&quot;&gt;message&lt;/mat-icon&gt;
 &lt;/button&gt;
-
 &lt;div *ngIf&#x3D;&quot;!ToggleMessages&quot; class&#x3D;&quot;container&quot;&gt;
- &lt;h1&gt;Messages:&lt;/h1&gt;
-  &lt;h2&gt;
-    Hi,{{title}} {{ name }} from {{country}}&lt;/h2&gt;
-
-
+ &lt;h1&gt;Messages:&lt;/h1&gt; 
   &lt;div *ngFor&#x3D;&quot;let message of messageService.messages&quot;&gt;
     &lt;p class&#x3D;&quot;message&quot;&gt;
       {{ message }}&lt;/p&gt;
+      
   &lt;/div&gt;
+  
   &lt;button mat-raised-button (click)&#x3D;&quot;messageService.clear()&quot;&gt;
-    Clear messages
+    Clear
   &lt;/button&gt;
 &lt;/div&gt;</code></pre>
     </div>
@@ -527,24 +421,26 @@ export class MessagesComponent implements OnInit {
                     <code>./messages.component.css</code>
                 </p>
                 <pre class="line-numbers"><code class="language-scss">*{
-   z-index: 11
+   z-index: 11;
 }
+
 .container {
   font-size: medium;
   position: fixed;
   right: 10px;
   top: 60px;
+  min-width: 10vw;
   width: auto;
-  height: auto;
-  max-height: 90vh;
- 
-  
-}
+  height: 30vw;
+  max-height: 90vh;   
+  max-width: 35vw;
+  overflow-wrap: break-word;
+  padding:0px;
+  }
 
 .container h1 {
-  font-size: 22px;
-  font-weight: bold;
-  line-height: 22px;
+  font-size: 20px;
+  font-weight: bold; 
   margin: 5px 0px;
 }
 
@@ -552,19 +448,20 @@ export class MessagesComponent implements OnInit {
   font-size: 16px;
   font-weight: 300;
   line-height: 20px;
-  margin: 0px 0 10px 0;
+  margin: 0px 0 12px 0;
 }
 .container p {
   font-size: 12px;
   font-weight: 200;
   line-height: 12px;
-  margin: 5px 0px;
+  margin: 10px 5px;
   padding: 0;
+overflow-wrap: break-word;
+
 }
 
 .message {
-  margin: 5px 0px;
-  
+  margin: 0px 0px;  
 }
 </code></pre>
     </div>
@@ -594,8 +491,8 @@ export class MessagesComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><button mat-icon-button (click)="ToggleMessageComponent()">  <mat-icon matBadge="12" matBadgeColor="accent" class="badge-icon favorite-icon" aria-label="Toggle Display Messages"    matTooltip="Toggle Display Messages" #tooltip="matTooltip">message</mat-icon></button><div *ngIf="!ToggleMessages" class="container"> <h1>Messages:</h1>  <h2>    Hi,{{title}} {{ name }} from {{country}}</h2>  <div *ngFor="let message of messageService.messages">    <p class="message">      {{ message }}</p>  </div>  <button mat-raised-button (click)="messageService.clear()">    Clear messages  </button></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'ContactPageComponent', 'selector': 'app-contact-page'},{'name': 'CounterDataComponent', 'selector': 'app-counter-data'},{'name': 'FileTreeComponent', 'selector': 'app-file-tree'},{'name': 'HomepageComponent', 'selector': 'app-homepage'},{'name': 'MenuComponent', 'selector': 'app-menu'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NgbCaruselComponent', 'selector': 'app-ngb-carusel'},{'name': 'ProjectsGridComponent', 'selector': 'app-projects-grid'},{'name': 'ThemeSwitchComponent', 'selector': 'app-theme-switch'},{'name': 'UserLoginComponent', 'selector': 'app-user-login'}];
+        var COMPONENT_TEMPLATE = '<div><button mat-icon-button (click)="ToggleMessageComponent()">  <mat-icon matBadge="{{ messageService.messages.length }}" matBadgeColor="accent" class="badge-icon favorite-icon" aria-label="Toggle Display Messages"    matTooltip="Toggle Display Messages" #tooltip="matTooltip">message</mat-icon></button><div *ngIf="!ToggleMessages" class="container"> <h1>Messages:</h1>   <div *ngFor="let message of messageService.messages">    <p class="message">      {{ message }}</p>        </div>    <button mat-raised-button (click)="messageService.clear()">    Clear  </button></div></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'ContactPageComponent', 'selector': 'app-contact-page'},{'name': 'CounterDataComponent', 'selector': 'app-counter-data'},{'name': 'FileTreeComponent', 'selector': 'app-file-tree'},{'name': 'FutureGreenTechComponent', 'selector': 'app-future-green-tech'},{'name': 'HomepageComponent', 'selector': 'app-homepage'},{'name': 'MenuComponent', 'selector': 'app-menu'},{'name': 'MessagesComponent', 'selector': 'app-messages'},{'name': 'NgbCaruselComponent', 'selector': 'app-ngb-carusel'},{'name': 'NordschleifeComponent', 'selector': 'app-nordschleife'},{'name': 'PortfolioComponent', 'selector': 'app-portfolio'},{'name': 'ProjectsGridComponent', 'selector': 'app-projects-grid'},{'name': 'QuoPicComponent', 'selector': 'app-quo-pic'},{'name': 'RespGalleryComponent', 'selector': 'app-resp-gallery'},{'name': 'ThemeSwitchComponent', 'selector': 'app-theme-switch'},{'name': 'UserLoginComponent', 'selector': 'app-user-login'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'MessagesComponent'};
 </script>
